[#23]. Creation of the EndPoint to create an environment
